<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="15dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="left|top"
                android:text="@string/date"
                android:textSize="@dimen/infosSchedule_txt_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/hour"
                android:textSize="@dimen/infosSchedule_txt_size" />


            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDate"
                android:layout_marginTop="5dp"
                android:text="@string/city"
                android:textSize="@dimen/infosSchedule_txt_size" />


            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAddress"
                android:layout_marginTop="15dp"
                android:text="@string/title"
                android:textSize="@dimen/infosSchedule_txt_title_size"
                android:textStyle="bold" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>