<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="crossover.com.medicalschedule.ViewConferenceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left|top"
                    android:text="@string/date"
                    android:textSize="@dimen/infosSchedule_txt_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hour"
                    android:textSize="@dimen/infosSchedule_txt_size" />


                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDate"
                    android:layout_marginTop="5dp"
                    android:text="@string/city"
                    android:textSize="@dimen/infosSchedule_txt_size" />


                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAddress"
                    android:layout_marginTop="15dp"
                    android:text="@string/title"
                    android:textSize="@dimen/infosSchedule_txt_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTopics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTitle"
                    android:layout_marginTop="15dp"
                    android:text="@string/topics"
                    android:textSize="@dimen/infosSchedule_txt_title_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/topics"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/txtTopics">
                    <ScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:weightSum="1">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txtTopics"
                                android:paddingTop="8dp">
                                <TextView
                                    android:id="@+id/txtTopicsDefault"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/topics_text" />
                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>



                <TextView
                    android:id="@+id/txtSuggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/topics"
                    android:layout_marginTop="15dp"
                    android:text="@string/suggests"
                    android:textSize="@dimen/infosSchedule_txt_title_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/suggestsTopics"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/txtSuggest">
                    <ScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:weightSum="1">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txtTopics"
                                android:paddingTop="8dp">
                                <TextView
                                    android:id="@+id/txtSuggests"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/topics_text" />
                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>
